# python_awair

./: .coveragerc  .gitignore  .lvimrc  .pylintrc  .travis.yml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/: workflows
.github/workflows/: ci.yaml
docs/: conf.py  examples.rst  index.rst  python_awair.rst  requirements.txt
examples/: local.py  remote.py
python_awair/: __init__.py  air_data.py  attrdict.py  auth.py  client.py  const.py  devices.py  exceptions.py  indices.py  sensors.py  user.py
tests/: __init__.py  const.py  test_python_awair.py  utils.py
tests/fixtures/: devices_response.json  fifteen_minute_response.json  five_minute_response.json  latest_response.json  ratelimit_response.json  raw_response.json  user_response.json
tests/fixtures/cassettes/: awair-r2.yaml  bad_auth.yaml  bad_params.yaml  custom_auth.yaml  devices.yaml  fifteen_minute.yaml  five_minute.yaml  glow.yaml  latest.yaml  latest_local.yaml  local_devices.yaml  mint.yaml  not_found.yaml  omni.yaml  raw.yaml  user.yaml
