[tool.poetry]
name = "python-awair"
version = "0.0.5"
description = "asyncio client for the Awair GraphQL API"
authors = ["Andrew Hayworth <ahayworth@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ahayworth/python_awair"
repository = "https://github.com/ahayworth/python_awair"
keywords = ["awair", "getawair", "api", "async", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "~3.6.1"

# TODO: make some of these dependencies optional
[tool.poetry.dev-dependencies]
aioresponses = "^0.6.3"
black = "^19.10b0"
flake8 = "^3.7.9"
ipython = "^7.13.0"
isort = "^4.3.21"
mypy = "^0.770"
pydocstyle = "^5.0.2"
pylint = "^2.4.4"
pyls-mypy = { git = "https://github.com/tomv564/pyls-mypy" }
pytest = "^5.2"
pytest-aiohttp = "^0.3.0"
python-language-server = "^0.31.9"
tox = "^3.14.6"
vcrpy = "^4.0.2"

[tool.poetry.urls]
"Say Thanks" = "https://saythanks.io/to/ahayworth@gmail.com"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36, py37, py38
isolated_build = True
skipsdist = True
skip_missing_interpreters = True

[testenv]
whitelist_externals = poetry
commands = poetry run pytest {posargs}

[testenv:lint]
whitelist_externals = poetry
commands =
  poetry run black . --check
  poetry run isort -c
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
