[tool.poetry]
name = "python-awair"
version = "0.0.5"
description = "asyncio client for the Awair GraphQL API"
authors = ["Andrew Hayworth <ahayworth@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ahayworth/python_awair"
repository = "https://github.com/ahayworth/python_awair"
keywords = ["awair", "getawair", "api", "async", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "~3.6.1"
voluptuous = "^0.11.7"

[tool.poetry.dev-dependencies]
coverage = "^5.0.4"
pytest = "^5.2"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^2.8.1"
tox = "^3.14.6"
vcrpy = "^4.0.2"

# These linters are optional for development, although
# CI jobs *do* enforce some of them.
black = { version = "^19.10b0", optional = true }
flake8 = { version = "^3.7.9", optional = true }
flake8-docstrings = { version = "^1.5.0", optional = true }
isort = { version = "^4.3.21", optional = true }
mypy = { version = "^0.770", optional = true }
pydocstyle = { version = "^5.0.2", optional = true }
pylint = { version = "^2.4.4", optional = true }
pyls-mypy = { git = "https://github.com/tomv564/pyls-mypy", optional = true }
python-language-server = { version = "^0.31.9", optional = true }

[tool.poetry.extras]
linters = ["black", "flake8", "flake8-docstrings", "isort", "mypyp", "pydocstyle", "pylint", "pyls-mypy", "python-language-server"]

[tool.poetry.urls]
"Say Thanks" = "https://saythanks.io/to/ahayworth@gmail.com"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36, py37, py38
isolated_build = True
skipsdist = True
skip_missing_interpreters = True

[testenv]
whitelist_externals = poetry
commands = poetry run pytest {posargs}

[testenv:lint]
whitelist_externals = poetry
commands =
  poetry run black . --check
  poetry run isort -c
  poetry run flake8
  poetry run pylint python_awair/ tests/
  poetry run mypy python_awair/ tests/

[testenv:coverage]
whitelist_externals = poetry
commands = poetry run pytest --cov=python_awair {posargs}
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
